--- a/src/index.css
+++ b/src/index.css
@@ -233,16 +233,17 @@ article h4 {
     font-size: 1.5rem;
   }
 }
+
 article {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  /* opacity: 0; */
+  /* opacity: 0;  */
   transition: var(--transition);
 }
-/* article.activeSlide {
+article.activeSlide {
   opacity: 1;
   transform: translateX(0);
 }
@@ -251,4 +252,4 @@ article.lastSlide {
 }
 article.nextSlide {
   transform: translateX(100%);
-} */
+}
